--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,6 @@ build:
 
 python:
   install:
-    - requirements: docs/source/requirements.txt
-
+    - requirements: docs/requirements.txt
 sphinx:
   configuration: docs/source/conf.py
